config/envoy/config_with_lua.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/force-host-rewrite"
                route:
                  cluster: dynamic_forward_proxy_cluster
                per_filter_config:
                  envoy.filters.http.dynamic_forward_proxy:
                    host_rewrite: www.example.org
              - match:
                  prefix: "/"
                route:
                  cluster: dynamic_forward_proxy_cluster
          access_log:
            - name: envoy.file_access_log
              config:
                path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.rbac
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.rbac.v2.RBAC
              rules:
                action: ALLOW
                policies:
                  "internal-access":
                    permissions:
                      - any: true
                    principals:
                      - source_ip: # RFC1918 possible internal network
                          address_prefix: "10.0.0.0"
                          prefix_len: 8
                      - source_ip: # RFC1918 possible internal network
                          address_prefix: "172.16.0.0"
                          prefix_len: 12
                      - source_ip: # RFC1918 possible internal network
                          address_prefix: "192.168.0.0"
                          prefix_len: 16
                      - source_ip: # RFC 4193 local private network range
                          address_prefix: "fc00::"
                          prefix_len: 7
                      - source_ip: # RFC 4291 link-local (directly plugged) machines
                          address_prefix: "fe80::"
                          prefix_len: 10
          - name: envoy.lua
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.lua.v2.Lua
              inline_code: |
                -- Called on the request path.
                function envoy_on_request(request_handle)
                  -- Whitelist patterns
                  local allowed_patterns = {
                    "^%w*%.?google%.com",
                    "^%w*%.?google%.co%.jp"
                  }

                  local headers = request_handle:headers()
                  local upstream_host = headers:get(":authority")

                  for _,pattern in ipairs(allowed_patterns) do
                    if string.match(upstream_host, pattern) then
                      -- If requested upstream host is in the whiltelist, then accept
                      return
                    end
                  end

                  -- If requested upstream is not in the whiltelist, then deny
                  request_handle:respond(
                    {[":status"] = "403"},
                    "Access denied.")
                end

                -- Called on the response path.
                function envoy_on_response(response_handle)
                end
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.dynamic_forward_proxy.v2alpha.FilterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                dns_lookup_family: V4_ONLY
          - name: envoy.router
  clusters:
  - name: dynamic_forward_proxy_cluster
    connect_timeout: 1s
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.config.cluster.dynamic_forward_proxy.v2alpha.ClusterConfig
        dns_cache_config:
          name: dynamic_forward_proxy_cache_config
          dns_lookup_family: V4_ONLY
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca: {filename: /etc/ssl/certs/ca-certificates.crt}
